2006-04-13 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Fixed a bug so where 'magdata' field was left empty when there was no magnet data attached to it. Now defaults to zero.
	- Does not automatically refresh the main figure window when switching to different files. Refreshing takes a while and gets annoying if not intended.

2006-04-11 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Loads and saves files correctly
	- Removes stage noise by default
	- Fixed couple of bugs and typos in frequency processing.
2006-03-27 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Added ability to save modified files as well as load thus saved files.
2006-03-05 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Now doesn't refresh time-domain plots automatically when any setting is changed. Added a separate button for that.
	- Incorporated msdbase code (soon to be committed) into gui.
2006-01-28 Kalpit Desai <kvdsai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Now asks user for confirmation when a file in the 'to load list' is already loaded in the data base. Eliminates need of first removing the file and reloading it when changing the experiment type.
	- Fixed a bug in plotting of multiples PSDs of lowbandwidth data
	- Fixed a crash that happened when user 'cancelled' edits of tag.
	- Now 'Cut' allows to select a point outside axis as the boundary. Useful when we want to remove all the data before or after certain time.
	* lt_analysis_gui.fig: 'Overlay Ch 8' renamed to 'Overlay Mags'

2006-01-27 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Now loglog plots are plotted taking log of the signal first and then plotting on linear axis.
	
2006-01-12 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Fixed several bugs with PSD computation and plotting