@@ -1,3 +1,7 @@
+2006-04-14 Kalpit Desai <kvdesai@email.unc.edu>
+	* lt_analysis_gui.m:
+	- Offset in the .drift. field is now set to zero, so that dependent codes don't have to add it back manually while subtracting drift using 'polyval'. Related changes allover.
+
 2006-04-13 Kalpit Desai <kvdesai@email.unc.edu>
 	* lt_analysis_gui.m:
 	- Fixed a bug so where 'magdata' field was left empty when there was no magnet data attached to it. Now defaults to zero.
